--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
       width: calc(100% - 250px);
       /* Asegura que el contenido ocupe todo el ancho restante */
       transition: all 0.3s ease;
+      height: calc(100vh - 60px);
     }
 
     body {
